   m l U n i t   C H A N G E L O G
=====================================


mlUnit development snapshot
---------------------------

  
  - Remove deprecate Ant code handling for matlab.bat or delegate matlab.exe
  - Add matlab.root Ant property for easier MATLAB referencing
  - Reliably fetch MATLAB executable from the system path if neither matlab.root
    nor matlab.exec given.

  - Further backend refactoring, merging diverged execution models:
      + Added initialize_execution and finalize_execution listener methods
      + Centralized execution of a test suite collection into
        mlunit_suite_runner/run_suite_collection.m, separating only the choice
        of listeners from former recursive_test_run implementation
      + recursive_test_run kept for compatibility


mlUnit 1.6.8 (2015-04-14)
-------------------------

  - mlUnit parameter changes in test of fixture functions will be reverted
    after each test's tear_down execution
  - Expanded mlunit_param to get and set the whole parameter configuration.
  - recursive_test_run restores path, pwd and mlunit_param to pre-run state
    after execution
  - simplify error list item names in GUI to omit the suite name, as test suites
    cannot nest anymore
  - Tighten failure display for multi-line output.
  - Link trace log items instead of giving an absolute paths, when being
    executed on the command line. Deliberately disabled when using the Ant task.
    No support for use in GUI, though. Turns out, a MATLAB GUI edit box can not
    display HTML links as the console does. Yair Altman managed to get down to
    switching an edit box to all-HTML rendering [Rich]. But then we'd need to
    HTMLize the whole input, not just the links. Also, findjobj would be
    necessary. See for yourself [jobj].
  - Shrink trace log items to only their filename, if requested by new mlUnit
    parameter abbrev_trace.
  - Lighten recursive_test_run output by setting every failure/error apart by
    a blank line.